--- a/src/app/add-task/add-task.component.html
+++ b/src/app/add-task/add-task.component.html
@@ -44,21 +44,21 @@
                         </div>
                     </div>
                     <div (click)="customizeColor($event)" class="colorContainer" *ngIf="editingCategory">
-                        <div (click)="selectedTargetIndex = 0" class="color-dot orange"
+                        <div (click)="selectedTargetIndex = 0" class="color-dot-orange"
                             [class.selected]="selectedTargetIndex === 0"></div>
-                        <div (click)="selectedTargetIndex = 1" class="color-dot red"
+                        <div (click)="selectedTargetIndex = 1" class="color-dot-red"
                             [class.selected]="selectedTargetIndex === 1"></div>
-                        <div (click)="selectedTargetIndex = 2" class="color-dot blue"
+                        <div (click)="selectedTargetIndex = 2" class="color-dot-blue"
                             [class.selected]="selectedTargetIndex === 2"></div>
-                        <div (click)="selectedTargetIndex = 3" class="color-dot lightblue"
+                        <div (click)="selectedTargetIndex = 3" class="color-dot-lightblue"
                             [class.selected]="selectedTargetIndex === 3"></div>
-                        <div (click)="selectedTargetIndex = 4" class="color-dot pink"
+                        <div (click)="selectedTargetIndex = 4" class="color-dot-pink"
                             [class.selected]="selectedTargetIndex === 4"></div>
-                        <div (click)="selectedTargetIndex = 5" class="color-dot lightpink"
+                        <div (click)="selectedTargetIndex = 5" class="color-dot-lightpink"
                             [class.selected]="selectedTargetIndex === 5"></div>
-                        <div (click)="selectedTargetIndex = 6" class="color-dot green"
+                        <div (click)="selectedTargetIndex = 6" class="color-dot-green"
                             [class.selected]="selectedTargetIndex === 6"></div>
-                        <div (click)="selectedTargetIndex = 7" class="color-dot turquo"
+                        <div (click)="selectedTargetIndex = 7" class="color-dot-turquo"
                             [class.selected]="selectedTargetIndex === 7"></div>
                     </div>
                 </div>
