--- a/src/styles.scss
+++ b/src/styles.scss
@@ -183,6 +183,10 @@ body {
   margin: 0;
 }
 
+.mt-15 {
+  margin-top: 1.5rem;
+}
+
 :root {
   --c-darkblue: rgb(42, 54, 71);
   --c-lightblue: rgb(41, 171, 226);
