--- a/src/app/add-task/add-task.component.html
+++ b/src/app/add-task/add-task.component.html
@@ -37,11 +37,10 @@
                                 <img src="./assets/img/icon_done.png" (click)="confirmCategory()">
                             </div>
                         </div>
-                        <div class="category" *ngFor="let category of categories.slice(1); let i = index"
-                            (click)="updateEditCategory($event)" attr.data-target="{{ i + 1 }}">
+                        <div class="category" *ngFor="let category of categories.slice(1); let i = index" (click)="updateEditCategory($event)" attr.data-target="{{ i + 1 }}">
                             <div class="category-text">{{ category }}</div>
-                            <div (click)="selectColor(i)" class="color-dot" [class.selected]="selectedTargetIndex === i"></div>
-                        </div>
+                            <div (click)="selectColor(i)" class="color-dot" [ngClass]="getColorClass(i)"></div>
+                        </div>             
                     </div>
                     <div (click)="customizeColor($event)" class="colorContainer" *ngIf="editingCategory">
                         <div (click)="selectedTargetIndex = 0" class="color-dot-orange"
@@ -72,8 +71,9 @@
 
             <div class="column-right">
                 <label for="date">Due Date</label>
-                <input type="date" min="2023-05-30" [(ngModel)]="date" (ngModelChange)="date = $event" [value]="date | date:'yyyy-MM-dd'" formControlName="date">
-                    <!-- {{ date | date:'yyyy-MM-dd' }} -->
+                <input type="date" min="2023-05-30" [(ngModel)]="date" (ngModelChange)="date = $event"
+                    [value]="date | date:'yyyy-MM-dd'" formControlName="date">
+                <!-- {{ date | date:'yyyy-MM-dd' }} -->
                 <div *ngIf="form.controls['date'].invalid && form.controls['date'].touched">
                     <div class="error-massage" *ngIf="form.controls['date'].errors?.['required']">Title is required.
                     </div>
@@ -110,7 +110,8 @@
                 </div>
                 <div class="action-button-container">
                     <button (click)=" clearTaskForm()">Clear<img src="./assets/img/icon_close.png"></button>
-                    <button type="submit" (click)="createTask()">Create Task<img src="./assets/img/icon_create.png"></button>
+                    <button type="submit" (click)="createTask()">Create Task<img
+                            src="./assets/img/icon_create.png"></button>
                 </div>
             </div>
         </form>
