--- a/src/styles.scss
+++ b/src/styles.scss
@@ -204,7 +204,15 @@ body {
   .header {
     grid-column: 2/7;
     grid-row: 1/1;
+  }
 
+  .sidebar {
+    grid-row: 1/11;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: var(--c-darkblue);
   }
 
   .board-container {
@@ -222,13 +230,11 @@ body {
     overflow-y: auto;
   }
 
-  .sidebar {
-    grid-row: 1/11;
+  .contacts-container {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background: var(--c-darkblue);
-  }
+    flex-direction: row;
+    grid-row: 2/ 11;
+    grid-column: 3/ 11;
+  } 
 }
 
