--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -22,7 +22,7 @@
             <div class="error-massage" *ngIf="form.controls['password'].errors?.['required']">Password is required.
             </div>
         </div>
-        <img src='assets/img/icon_lock.png' />
+        <img src='./assets/img/icon_lock.png' />
     </div>
     <div class='login-options-container'>
         <div class="column1">
