--- a/src/app/contacts/contacts.component.scss
+++ b/src/app/contacts/contacts.component.scss
@@ -113,7 +113,6 @@ ul {
 }
 
 .header-secondary p {
-    /* font-family: "Inter"; */
     font-size: 1.2rem;
 }
 
@@ -127,7 +126,6 @@ ul {
 .contact-info-chart {
     display: flex;
     flex-direction: column;
-    /* width: 755px; */
 }
 
 .contact-info {
@@ -139,7 +137,6 @@ ul {
     align-items: center;
     cursor: pointer;
     padding: 15px 0 15px 7px;
-    /* border-bottom: 2px solid var(--dimmed); */
 }
 
 .contact-box:first-of-type {
@@ -278,58 +275,59 @@ ul {
 }
 
 .add-contact-overlay {
+    position: relative;
+    right: 150px;
+    top: 50px;
     display: flex;
     border: 1px solid black;
-    width: 80%;
-    height: 90vh;
     border-radius: 15px;
-}
 
-.left-overlay {
-    width: 40%;
-    height: 100%;
-    background-color: #2a3647;
-    border-radius: 15px 0 0 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0 20px 0 20px;
-}
+    .add-contact-inputs {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: white;
+        width: 60%;
+        height: 436px;
+        border-radius: 0 15px 15px 0;
+    }
 
-.left-overlay div {
-    display: flex;
-    flex-direction: column;
-    color: white;
-}
+    .left-overlay {
+        width: 40%;
+        height: 436px;
+        background-color: #2a3647;
+        border-radius: 15px 0 0 15px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0 20px 0 20px;
+    }
 
-.left-overlay div>h1 {
-    margin: 0;
-    font-size: 3.5rem;
-    margin: 1rem 0px 1rem 0;
-}
-
-.left-overlay div>p {
-    font-size: 1.5rem;
-    margin: 0;
-}
-
-.left-overlay div>img:first-of-type {
-    width: 70px;
-}
-
-.left-overlay div>img:last-of-type {
-    width: 150px;
-    margin-top: 7px;
-}
-
-.add-contact-inputs {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-    width: 60%;
-    height: 100%;
-    border-radius: 0 15px 15px 0;
+    .left-overlay div {
+        display: flex;
+        flex-direction: column;
+        color: white;
+    }
+    
+    .left-overlay div>h1 {
+        margin: 0;
+        font-size: 3.5rem;
+        margin: 1rem 0px 1rem 0;
+    }
+    
+    .left-overlay div>p {
+        font-size: 1.5rem;
+        margin: 0;
+    }
+    
+    .left-overlay div>img:first-of-type {
+        width: 70px;
+    }
+    
+    .left-overlay div>img:last-of-type {
+        width: 150px;
+        margin-top: 7px;
+    }  
 }
 
 #searchContacts {
