--- a/src/app/add-task/add-task.component.html
+++ b/src/app/add-task/add-task.component.html
@@ -108,7 +108,7 @@
                 </div>
                 <div class="action-button-container">
                     <button (click)=" clearTaskForm()">Clear<img src="./assets/img/icon_close.png"></button>
-                    <button type="submit" (ngSubmit)="createTask()">Create Task<img
+                    <button type="submit" (click)="createTask()">Create Task<img
                             src="./assets/img/icon_create.png"></button>
                 </div>
             </div>
