--- a/src/app/add-task/add-task.component.html
+++ b/src/app/add-task/add-task.component.html
@@ -62,7 +62,7 @@
                 </div>
                 <label>Assigned to</label>
                 <div class="contact-input-container">
-                    <input readonly value="Select contacts to assign" (click)="toggleAssigned()">
+                    <input readonly value="Select contacts to assign" (click)="toggleAssignedToContact()">
                     <img class="drop-down" src="./assets/img/icon_triangle.png">
                 </div>
                 <div class="contactsDropdownContainer"></div>
