--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -9,7 +9,7 @@
                     <ul *ngIf="contactInList">
                         <li *ngFor="let contact of contacts">
                             <div class="sorter">{{ contact.name[0] }}</div>
-                            <div class="contact-box" (click)="toggleBetweenContacts($event)">
+                            <div class="contact-box" (click)="toggleBetweenContacts(contact.id)">
                                 <a href="#">
                                     <div id="initialsContainer"></div>
                                 </a>
@@ -37,11 +37,11 @@
                         (click)="closeContactDataMobile()">
                 </div>
                 <div *ngIf="updatedContacts">
-                    <div class="contact-info">
+                    <div class="contact-info" *ngFor="let contact of contacts">
                         <div class="contact-header">
                             <div class="initials-big"></div>
                             <div class="add-task-container-small">
-                                <h1></h1>
+                                <h1>{{ contact.name }}</h1>
                                 <div class="contact-task" id="contact-task" (click)="renderTaskOverlay()">
                                     <img src="./assets/img/icon_add_task_plus.png" alt="#">
                                     <h2>Add Task</h2>
@@ -56,11 +56,11 @@
                         </div>
                         <div class="contact-mail">
                             <h3>Email</h3>
-                            <a href="mailto:ania.schulze@hotmail.com"></a>
+                            <a href="mailto:ania.schulze@hotmail.com">{{ contact.email }}</a>
                         </div>
                         <div class="contact-call">
                             <h3>Phone</h3>
-                            <a href="tel:+49 123-456-7890"></a>
+                            <a href="tel:+49 123-456-7890">{{ contact.phone }}</a>
                         </div>
                     </div>
                 </div>
